moving  images in a new directory

--- a/BootstrapPractice.html
+++ b/BootstrapPractice.html
@@ -130,13 +130,13 @@
                         <!-- Wrapper for carousel items -->
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/pho5.jpeg" class="d-block w-100" alt="Slide 1">
+                                <img src="./images/pho5.jpeg" class="d-block w-100" alt="Slide 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="./pho3.jpeg" class="d-block w-100" alt="Slide 2">
+                                <img src="./images/pho3.jpeg" class="d-block w-100" alt="Slide 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="./pho2jpeg.jpeg" class="d-block w-100" alt="Slide 3">
+                                <img src="./images/pho2jpeg.jpeg" class="d-block w-100" alt="Slide 3">
                             </div>
                         </div>
                 
@@ -260,3 +260,5 @@
  
   </body>
 </html>
+
+<!-- https://www.absoluteweb.com/ -->
