--- a/BootstrapPractice.html
+++ b/BootstrapPractice.html
@@ -48,7 +48,7 @@
                            </div>
 
                            <div class="navbar-nav">
-                               <a href="#" class="nav-item nav-link">Login</a>
+                               <a href="#" class="nav-item nav-link">Sign Up</a>
                            </div>
                        </div>
                    </div>
